# selective-observation-minimax

./: .gitignore  README.md  pyproject.toml
christensen_core/: IMPLEMENTATION_PLAN.md  README.md  __init__.py  estimator.py  inner_solver.py  moments.py  outer_solver.py  pereira_q.py  q_classes.py  reference_based_q.py
christensen_core/tests/: diagnostic_centered_vs_wide.py  test_inner_solver.py  test_integration.py  test_moments.py  test_outer_solver.py  test_pereira_q.py  test_q_classes.py  test_reduction_to_ols.py  test_reference_based_q.py
docs/pereira_2024/: chapter9_mnar.txt  thesis_text.txt
examples/: __init__.py  synthetic_selective_observation.py
experiments/wilds_civilcomments/: README.md  RESULTS.md  common.py  dataset.py  eval.py  metrics.py  multiseed.py  report.py  semi_supervised.py  train.py
experiments/wilds_civilcomments/configs/: midscale_auto_v1_rate_0p70.yaml  midscale_auto_v1_rate_0p75.yaml  smoke_erm.yaml  smoke_robust_group.yaml
minimax_ag_game/: __init__.py  cli.py  game.py  portfolio_game.py  web_ui.py
minimax_core/: __init__.py  adversary.py  ag_benchmark.py  comparison.py  config.py  fred_prices.py  gradient_validation.py  hf_portfolio_benchmark.py  metrics.py  mnar.py  monte_carlo.py  objectives.py  price_dynamics.py  structural_breaks.py  uncertainty.py
minimax_hf/: __init__.py  config.py  data.py  losses.py  trainer.py
phase1_pereira_benchmark/: .gitignore  AUDIT.md  PROTOCOL.md  REPORT.md  REPORT_v3.md  __init__.py  analyze.py  baselines.py  christensen_adapter.py  datasets.py  harness.py  minimax_adapter.py  mnar_injection.py  preprocess.py  requirements.txt  run_benchmark.py
phase3_jtpa_benchmark/: .gitignore  IMPLEMENTATION_PLAN.md  PROTOCOL.md  __init__.py  baselines.py  christensen_adapter.py  datasets.py  harness.py
tests/: test_adversary.py  test_ag_benchmark.py  test_ag_game.py  test_comparison.py  test_fred_prices.py  test_gradient_validation.py  test_hf_utils.py  test_mnar.py  test_monte_carlo.py  test_objectives.py  test_portfolio_game.py  test_synthetic_example.py  test_uncertainty.py  test_wilds_metrics.py  test_wilds_multiseed.py  test_wilds_report.py  test_wilds_semi_supervised.py  test_wilds_train.py  test_wilds_utils.py
